--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -1,4 +1,4 @@
-name:                alias-matcher
+name:                dot-linker
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
@@ -13,14 +13,15 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-executable alias-matcher-exe
+executable dot-linker
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , alias-matcher
                      , turtle
-                     , hashmap
+                     , unordered-containers
+                     , unix
+                     , text
   default-language:    Haskell2010
 
 source-repository head
