--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -13,11 +13,20 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
+library
+  hs-source-dirs:      src
+  exposed-modules:     DotLinker
+  build-depends:       base
+                     , attoparsec
+                     , text
+  default-language:    Haskell2010
+
 executable dot-linker
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:       base
+                     , dot-linker
                      , turtle
                      , unordered-containers
                      , unix
