--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -33,6 +33,7 @@ executable dot-linker
                      , unordered-containers
                      , unix
                      , text
+                     , attoparsec
   default-language:    Haskell2010
 
 test-suite dot-linker-spec
@@ -43,6 +44,7 @@ test-suite dot-linker-spec
   ghc-options: -Wall
   build-depends:
      base
+   , bytestring
    , dot-linker
    , HUnit
    , tasty
