--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -18,8 +18,11 @@ library
   exposed-modules:     DotLinker
   build-depends:       base
                      , attoparsec
+                     , turtle
                      , text
                      , system-filepath
+                     , unix
+                     , unordered-containers
   ghc-options:         -Wall
   default-language:    Haskell2010
 
@@ -28,12 +31,11 @@ executable dot-linker
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:       base
+                     , attoparsec
                      , dot-linker
                      , turtle
-                     , unordered-containers
-                     , unix
                      , text
-                     , attoparsec
+                     , unordered-containers
   default-language:    Haskell2010
 
 test-suite dot-linker-spec
