Make expand-path parser and function

--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     DotLinker
   build-depends:       base
                      , attoparsec
+                     , bytestring
                      , turtle
                      , text
                      , system-filepath
