--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     DotLinker
+                     , DotLinker.Parsers
   build-depends:       base
                      , attoparsec
                      , bytestring
