Couple more clean ups

--- a/dot-linker.cabal
+++ b/dot-linker.cabal
@@ -31,7 +31,7 @@ library
 executable dot-linker
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , attoparsec
                      , dot-linker
